org.mmisw.orrclient - ORR Client Library
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13
$Id$

2010-09-25  2.0.7.beta
	- IOrrClient: removed unused method getEntities(RegisteredOntologyInfo) -> RegisteredOntologyInfo
		
2010-09-22  2.0.6.beta
	- some minor adjustments related with UTF-8 
	
2010-09-12  2.0.5.beta
	- removed org.mmi.ont.util.jar: no longer needed; related operations now provided by Ont's
	  org.mmisw.ont.misc.jar library (ie., by the JenaUtil2 class).
	
	- OntModelUtil.getOntology(OntModel ontModel) also moved to JenaUtil2.
	
	- Removed OntModelUtil.loadModel(String uriModel, boolean processImports): not used anywhere.
	
	- Also removed dependency on org.mmi.util.jar library (call ISO8601Date.getCurrentDateBasicFormat). 
	  Replaced with MDHelper._getCurrentDateBasicFormat().
	
2010-09-10   2.0.4.beta
	- Fixed 280: "Error getting entities" (reported by Roy L.)
	  OntInfo._getIndividuals.
	  
	  
	  
2010-09-09   2.0.4.beta
	- MdHelper: note that MdUtil.readResourceTypes and MdUtil.readAuthorities are now ONLY
	  called in refreshOptions(AttrDef attrDef);  These calls were removed during the
	  initialization sequence started by prepareGroups(..).
	  So, clients should call IOrrClient.refreshOptions(AttrDef attrDef) to get the
	  corresponding options filled in when the attribute has an associated vocabulary,
	  ie., when attrDef.getOptionsVocabulary() != null.
	  
	- OrrClientImpl: create config.getPreviewDirectory() if not already existing.
	
	- IOrrClient.getTempOntologyInfo and TempOntologyHelper.getTempOntologyInfo: now work on 
	  given filename (previously the parameter was named 'uploadResults' since it contained
	  the xml output from the UploadServlet in the orrportal module was done.). 
	
	- Misc: calling xx.class.getClassLoader().setDefaultAssertionStatus(true) for
	  the various unit tests.	  

	- New test org.mmisw.orrclient.core.test.reg.ReHostedRegTest 
	
	
	
2010-09-07    2.0.3.beta
	- some clean-up and fixes.
	